syntax = "proto3";
package nti.nti;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "nti/x/nti/types";

// Msg defines the Msg service.
service Msg {
      rpc ReserveNftTransfer(MsgReserveNftTransfer) returns (MsgReserveNftTransferResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgReserveNftTransfer {
  string creator = 1;
  string srcNftHash = 2;
  string srcChain = 3;
  string srcAddr = 4;
  string destNftHash = 5;
  string destChain = 6;
  string destAddr = 7;
  int32 blockHeight = 8;
}

message MsgReserveNftTransferResponse {
}

// this line is used by starport scaffolding # proto/tx/message
